# streamlit-video-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/streamlit_video_analysis/: __init__.py
src/streamlit_video_analysis/app/: video.py
src/streamlit_video_analysis/gdrive/: credentials.py  drive_info.py
