[project]
name = "streamlit-video-analysis"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "gshirato", email = "g8ta18@gmail.com" }
]
dependencies = [
    "streamlit>=1.42.0",
    "authlib>=1.4.1",
    "gdown>=5.2.0",
    "ipykernel>=6.29.5",
    "google-auth>=2.38.0",
    "google-api-python-client>=2.161.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "pyperclip>=1.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/streamlit_video_analysis"]
